--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 
 plugins {
     id 'base'
-    id 'com.palantir.docker' version '0.26.0'
-    id 'com.palantir.docker-run' version '0.26.0'
+    id 'com.palantir.docker' version '0.25.0'
+    id 'com.palantir.docker-run' version '0.25.0'
     id 'pl.allegro.tech.build.axion-release' version '1.12.0'
 }
 
@@ -16,7 +16,7 @@ docker {
 
 Process process
 if (DefaultNativePlatform.getCurrentOperatingSystem().isWindows()) {
-    process = "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock alpine stat -c %g /var/run/docker.sock".execute()
+    process = "docker run --rm -v //var//run//docker.sock://var//run//docker.sock alpine stat -c %g //var//run//docker.sock".execute()
 } else if (DefaultNativePlatform.getCurrentOperatingSystem().isLinux()) {
     process = "stat -c %g /var/run/docker.sock".execute()
 } else {
@@ -27,12 +27,11 @@ def out = new ByteArrayOutputStream()
 process.waitForProcessOutput(out, System.err)
 String dockerSockGroupId = out.toString().trim()
 
-String extraPrefix = DefaultNativePlatform.getCurrentOperatingSystem().isWindows() ? '/' : ''
 dockerRun {
     name "${project.name}"
     image "${project.name}:${project.version}"
     ports '8080:8080'
     clean true
     daemonize false
-    arguments '-v', "$extraPrefix/var/run/docker.sock:/var/run/docker.sock", '--group-add', dockerSockGroupId
+    arguments '-v', '//var//run//docker.sock://var//run//docker.sock', '--group-add', dockerSockGroupId
 }
